Fixed button styling issue not showing cursor on hover

--- a/assets/sass/includes/_helpers.sass
+++ b/assets/sass/includes/_helpers.sass
@@ -3,6 +3,7 @@
 // EXTENDS
 // Common Button Properties
 %button--common
+    cursor: pointer
     font-size: .8rem
     color: $color-white
     font-weight: $font-weight-bold
